--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "-": "^0.0.1",
     "nodemon": "^3.1.10",
+    "prisma": "^6.16.1",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.1",
     "apollo-server": "^3.13.0",
     "graphql": "^16.11.0"
   }
